<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:padding="20dp"
    tools:context=".ui.user.UserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user_start_data"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_user_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_username"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:src="@drawable/ic_logo_chikara_500" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/FuenteBase"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_user_picture"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.85"
            tools:text="@string/hint_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_user_start_data"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etUserName"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_user_login"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_email_box"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUserName" />

            <EditText
                android:id="@+id/etFirstName"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_account_details"
                android:hint="@string/hint_first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                android:id="@+id/etFirstLastName"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_account_details"
                android:hint="@string/hint_first_last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

            <EditText
                android:id="@+id/etSecondLastName"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_account_details"
                android:hint="@string/hint_second_last_name_optional"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFirstLastName" />

            <EditText
                android:id="@+id/etBirthDate"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_calendar_range"
                android:hint="@string/hint_birth_date"
                android:imeOptions="actionNext"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSecondLastName" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_password_login"
                android:hint="@string/hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etBirthDate" />

            <EditText
                android:id="@+id/etPasswordRepeat"
                style="@style/ETRegistro"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_password_login"
                android:hint="@string/hint_repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/FuenteBase"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/psgreen"
                android:elevation="4dp"
                android:text="@string/text_update_info"
                android:textAlignment="gravity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPasswordRepeat" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>